--- a/style.css
+++ b/style.css
@@ -6,3 +6,10 @@
 .cs50-info-version {
     background-color: inherit !important;
 }
+
+/* update50 notification */
+.cs50-notification {
+    background-color: #4285f4;
+    color: white;
+    padding: 10px;
+}
