changes update notification's bg color to orange

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 /* update50 notification */
 .cs50-notification {
-    background-color: #4285f4;
+    background-color: orange;
     color: white;
     padding: 10px;
 }
